[package]
name = "hpke-ref"
version = "0.1.0"
edition = "2024"

[dependencies]
aead = "0.5.2"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
hkdf = "0.12.4"
hmac = "0.12.1"
ml-kem = "0.3.0-pre.1"
p256 = { version = "0.13", features = ["ecdh"] }
p384 = "0.13"
p521 = { version = "0.13", features = ["ecdh"] }
rand = "0.9"
sha2 = "0.10.8"
sha3 = "0.10.8"
x25519-dalek = { version = "3.0.0-pre.1", features = ["static_secrets"] }
x448 = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { version = "0.4", features = ["serde"] }
hex-literal = "1.0.0"
generic-array = "0.14"
old_rand_core = { package = "rand_core", version = "0.6" }

# Import the generic hybrid KEM crate
concrete-hybrid-kem = { git = "https://github.com/cfrg/draft-irtf-cfrg-concrete-hybrid-kems.git" }


[[bin]]
name = "generate-test-vectors"
path = "src/bin/generate.rs"

[[bin]]
name = "verify-test-vectors"
path = "src/bin/verify.rs"

[[bin]]
name = "json-to-markdown"
path = "src/bin/json-to-markdown.rs"
